--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
