--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
+    "sortablejs": "^1.15.2",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
