--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.6.0",
     "sortablejs": "^1.15.2",
     "uniqid": "^5.4.0"
   },
