--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-spinners": "^0.13.8",
     "react-sweetalert2": "^0.6.0",
     "sortablejs": "^1.15.2",
+    "stripe": "^14.17.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
